--- a/JDict.Tests/JDict.Tests.csproj
+++ b/JDict.Tests/JDict.Tests.csproj
@@ -6,7 +6,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E8AC3ADD-FE61-4961-8663-0C6E90F7F033}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>JDict.Tests</RootNamespace>
     <AssemblyName>JDict.Tests</AssemblyName>
@@ -84,9 +84,6 @@
     </Reference>
     <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.11.0\lib\net45\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="nunitlite, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnitLite.3.11.0\lib\net45\nunitlite.dll</HintPath>
     </Reference>
     <Reference Include="Optional, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Optional.4.0.0\lib\net45\Optional.dll</HintPath>
@@ -266,7 +263,6 @@
     <Compile Include="Kradfile.cs" />
     <Compile Include="MeCab.cs" />
     <Compile Include="PerformanceTests.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RadicalSearcherTests.cs" />
     <Compile Include="Romaji.cs" />
@@ -319,9 +315,6 @@
   <ItemGroup>
     <Analyzer Include="..\packages\Gu.Analyzers.1.3.2.0-dev\analyzers\dotnet\cs\Gu.Analyzers.dll" />
     <Analyzer Include="..\packages\Gu.Analyzers.1.3.2.0-dev\analyzers\dotnet\cs\Gu.Roslyn.Extensions.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Program.vb" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
