--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,4 +7,8 @@ install:
   - cd %APPVEYOR_BUILD_FOLDER%
   - git submodule update --init --recursive
   - nuget restore
+artifacts:
+  - path: $(APPVEYOR_BUILD_FOLDER)/DidacticalEnigma/bin/Release/*
+    name: Release
+    type: zip
 
