--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,8 +7,11 @@ install:
   - cd %APPVEYOR_BUILD_FOLDER%
   - git submodule update --init --recursive
   - nuget restore
+after_build:
+  - ren %APPVEYOR_BUILD_FOLDER%\DidacticalEnigma\bin\Release DidacticalEnigma
+  - 7z a -r DidacticalEnigma.zip %APPVEYOR_BUILD_FOLDER%\DidacticalEnigma\bin\DidacticalEnigma
 artifacts:
-  - path: DidacticalEnigma/bin/Release/*
-    name: Release
+  - path: DidacticalEnigma.zip
+    name: Full program
     type: zip
 
