--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/milleniumbug/TinyIndex
 [submodule "FuzzySharp"]
 	path = FuzzySharp
-	url = git@github.com:milleniumbug/FuzzySharp.git
+	url = https://gihub.com/milleniumbug/FuzzySharp
 [submodule "LibJpConjSharp"]
 	path = LibJpConjSharp
-	url = git@github.com:milleniumbug/LibJpConjSharp.git
+	url = https://github.com/milleniumbug/LibJpConjSharp
