--- a/AutomatedTests.NetFramework/AutomatedTests.NetFramework.csproj
+++ b/AutomatedTests.NetFramework/AutomatedTests.NetFramework.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{12D1829B-C437-46AA-B2BE-587B913F4AF7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AutomatedTests.NetFramework</RootNamespace>
+    <RootNamespace>AutomatedTests</RootNamespace>
     <AssemblyName>AutomatedTests.NetFramework</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
