--- a/DidacticalEnigma/packages.config
+++ b/DidacticalEnigma/packages.config
@@ -6,6 +6,8 @@
   <package id="LibJpConjSharp" version="0.5.8" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net461" />
+  <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="NMeCabNetStandard" version="0.7.0" targetFramework="net461" />
