--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,14 +6,14 @@ build:
   project: DidacticalEnigma.sln
   verbosity: minimal
 install:
-  - ps: cd $APPVEYOR_BUILD_FOLDER
+  - ps: cd $env:APPVEYOR_BUILD_FOLDER
   - ps: git submodule update --init --recursive
   - ps: nuget restore
-  - ps: dotnet publish MagicTranslatorGlosser/MagicTranslatorGlosser.csproj -c Release -r linux-x64 --self-contained false -o $APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/Release/MagicTranslatorGlosser
-  - ps: dotnet publish MagicTranslatorGlosser/MagicTranslatorGlosser.csproj -c Release -r win-x64 --self-contained false -o $APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/Release/MagicTranslatorGlosser
+  - ps: dotnet publish MagicTranslatorGlosser/MagicTranslatorGlosser.csproj -c Release -r linux-x64 --self-contained false -o $env:APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/Release/MagicTranslatorGlosser
+  - ps: dotnet publish MagicTranslatorGlosser/MagicTranslatorGlosser.csproj -c Release -r win-x64 --self-contained false -o $env:APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/Release/MagicTranslatorGlosser
 after_build:
-  - ps: mv $APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/Release $APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/DidacticalEnigma
-  - ps: 7z a -r DidacticalEnigma.zip $APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/DidacticalEnigma
+  - ps: mv $env:APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/Release $env:APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/DidacticalEnigma
+  - ps: 7z a -r DidacticalEnigma.zip $env:APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/DidacticalEnigma
 artifacts:
   - path: DidacticalEnigma.zip
     name: Full program
